log
Thu 24 Aug 2023 08:22:16 PM UTC: 
 tests:  0|6
total_score: 0/70
fd65fc8
Thu 24 Aug 2023 08:25:32 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c:31:8: error: conflicting types for ‘createList’; have ‘List *(int)’ {aka ‘struct List *(int)’}
   31 | List * createList(int ) {
      |        ^~~~~~~~~~
In file included from list.c:4,
                 from test.c:5:
list.h:6:8: note: previous declaration of ‘createList’ with type ‘List *(void)’ {aka ‘struct List *(void)’}
    6 | List * createList(void);
      |        ^~~~~~~~~~
test.c: In function ‘test_create’:
test.c:84:15: error: too few arguments to function ‘createList’
   84 |     List* L = createList();
      |               ^~~~~~~~~~
In file included from test.c:5:
list.c:31:8: note: declared here
   31 | List * createList(int ) {
      |        ^~~~~~~~~~
Compilation failed
162d317
Thu 24 Aug 2023 08:25:46 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
92454ab
Thu 24 Aug 2023 11:08:18 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|6
total_score: 0/70
94dcd26
Thu 24 Aug 2023 11:11:14 PM UTC: 
 list.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
743c934
Thu 24 Aug 2023 11:16:58 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
a476c09
Thu 24 Aug 2023 11:17:46 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
22dc87b
Thu 24 Aug 2023 11:18:47 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|5
total_score: 10/70
5010530
Fri 25 Aug 2023 01:01:36 AM UTC: 
 list.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  1|5
total_score: 10/70
6d7a169
Fri 25 Aug 2023 01:01:50 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
cfbe5ab
Fri 25 Aug 2023 01:04:12 AM UTC: 
 list.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  1|5
total_score: 10/70
edca3b3
Fri 25 Aug 2023 01:12:19 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e567e5b
